[package]
name = "soar"
version = "0.1.0"
edition = "2018"

[lib]
name = "soar"
crate-type = ["cdylib"]

[dependencies]
ndarray = "0.15.3"
numpy = "0.15.0"

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[features]
extension-module = ["pyo3/extension-module"]
default = ["extension-module"]